tests/ui/struct_missing_field.stderr
Error [E0303]: struct literal for `Point` is missing fields: y
  --> tests/ui/struct_missing_field.jet:7:13
    |
  7 |     val p = Point { x: 1 };
    |             ^^^^^^^^^^^^^^
 Why: every non-`ref` field must appear exactly once
 Fix: add: y
