tests/ui/struct_missing_field.lex
struct Point {
    x: Int;
    y: Int;
}

fn main() {
    val p = Point { x: 1 };
    print(p.x);
}
